--- a/src/App.css
+++ b/src/App.css
@@ -6,84 +6,24 @@
 }
 
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
 .App-content {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  grid-gap: 20px;
-}
-.App-content img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.form-container {
-  width: 60%;
-  margin: 0 auto;
-
-}
-
-
-.inputSearch {
-  width: 100%;
-  padding: 1em;
-  border: 1px solid #039cf5;
-  border-radius: 5px;
-  margin-bottom: 1em;
-  font-size: medium;
-}
-.inputSearch:focus {
-  outline: none;
-  border: 1px solid #039cf5;
-  box-shadow: 0 0 5px #039cf5;
-}
-
-.keyword-recomended {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 1em;
   margin-bottom: 1em;
 }
-.keyword-recomended .keyword-link{
-  padding: 0.5em 1em;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  color: #888;
-  cursor: pointer;
-    &:hover {
-      background-color: #202020;
-      border: 1px solid aqua;
-    }
-}
-.title-gif {
+
+
+.title {
   font-size: 100px;
   font-weight: 900;
   background: #0455CF;
   background: linear-gradient(to right, #0455CF 0%, #30C4CF 100%);
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.btn-alert {
-  position: relative;
-  display: inline-block;
-  padding: 0.5em 1em;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  color: #888;
-  cursor: pointer;
-  bottom: 100%;
-  left: 30%;
-  &:hover {
-    background-color: #202020;
-    border: 1px solid aqua;
-  }
-}
+
+
