structured and split in more componentes, add new pages for details gif, change styles, add spinner for loaded gif and max fetch gif to 20 results

--- a/src/components/gif/Gif.module.css
+++ b/src/components/gif/Gif.module.css
@@ -54,11 +54,12 @@
   
 }
 
-.icon_copy {
-  position: relative;
-}
-.icon_copy::after {
- 
+.spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+ bottom: 50px;
 }
 
 .icon_copy:hover::after {
