--- a/src/App.css
+++ b/src/App.css
@@ -25,5 +25,17 @@
   -webkit-text-fill-color: transparent;
 }
 
+.home-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 10px;
+}
+
+.home-container .img-home {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 
 
