--- a/src/components/gif/Gif.module.css
+++ b/src/components/gif/Gif.module.css
@@ -1,12 +1,18 @@
 .form_container {
-  width: 60%;
-  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+ 
 
 }
 
+.form {
+  flex-grow: 1;
+  width: 100%;
+}
 
 .inputSearch {
-  width: 100%;
+  width: 50%;
   padding: 1em;
   border: 1px solid #039cf5;
   border-radius: 5px;
